--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <base target="_top">
-  <script>window.API_BASE='https://www.nurserysera.com/api';</script>
+  <script>window.API_BASE='https://nurseryseraorder-production-89f1.up.railway.app/api';</script>
   <meta name="viewport" content="width=950, user-scalable=no">
   <title>nursery sera — ご注文フォーム</title>
   <link href="https://fonts.googleapis.com/css2?family=Bayon&family=Tangerine:wght@700&family=Italianno&display=swap" rel="stylesheet">
