--- a/public/admin.html
+++ b/public/admin.html
@@ -8,12 +8,20 @@
     table{border-collapse:collapse;width:100%;}
     th,td{border:1px solid #ccc;padding:6px 10px;text-align:left;font-size:14px;}
     th{background:#eee;}
-    button{margin:10px 0;padding:6px 14px;font-size:14px;cursor:pointer;}
+    button, select{margin:10px 5px;padding:6px 14px;font-size:14px;cursor:pointer;}
   </style>
 </head>
 <body>
   <h1>注文データ一覧</h1>
+
+  <label for="shipType">配送方法：</label>
+  <select id="shipType">
+    <option value="0">宅急便（発払い）</option>
+    <option value="A">ネコポス</option>
+  </select>
+
   <button id="csvBtn">CSVダウンロード</button>
+
   <table id="ordersTable">
     <thead>
       <tr>
@@ -24,11 +32,11 @@
   </table>
 
   <script type="module">
-    // ===== パスワードガード（Firebase管理ページと同方式） =====
+    // ===== パスワード保護 =====
     (function(){
       const pass = sessionStorage.getItem('admin-pass') || prompt('パスワードを入力してください');
       if (pass !== 'kohakurira') {
-        alert('不正アクセス検知：トップページに戻ります');
+        alert('アクセス拒否：トップページに戻ります');
         location.href = '/';
       } else {
         sessionStorage.setItem('admin-pass', pass);
@@ -39,9 +47,7 @@
     async function loadOrders(){
       try {
         const res = await fetch("/api/orders");
-        if (!res.ok) {
-          throw new Error("データ取得に失敗しました");
-        }
+        if (!res.ok) throw new Error("データ取得失敗");
         const data = await res.json();
         const tbody = document.querySelector("#ordersTable tbody");
         tbody.innerHTML = "";
@@ -58,17 +64,18 @@
           tbody.appendChild(tr);
         });
       } catch (err) {
-        console.error("読み込みエラー:", err);
+        console.error(err);
         alert("データの読み込み中にエラーが発生しました。");
       }
     }
 
-    // ===== CSVボタン =====
+    // ===== CSVダウンロード =====
     document.getElementById("csvBtn").addEventListener("click", ()=>{
-      window.location = "/api/orders/csv";
+      const shipType = document.getElementById("shipType").value;
+      window.location = `/api/orders/csv?type=${shipType}`;
     });
 
-    // ===== ページ読み込み時に実行 =====
+    // ===== ページ読み込み時 =====
     loadOrders();
   </script>
 </body>
