--- a/public/admin.html
+++ b/public/admin.html
@@ -6,18 +6,45 @@
   <style>
     body{font-family:sans-serif;margin:40px;}
     table{border-collapse:collapse;width:100%;}
-    th,td{border:1px solid #ccc;padding:6px 10px;text-align:left;font-size:14px;}
+    th,td{border:1px solid #ccc;padding:6px 10px;text-align:left;font-size:14px;vertical-align:middle;}
     th{background:#eee;}
-    button{margin:10px 0;padding:6px 14px;font-size:14px;cursor:pointer;}
+    button, select{margin:10px 6px 10px 0;padding:6px 14px;font-size:14px;cursor:pointer;}
+    .controls{display:flex;flex-wrap:wrap;align-items:center;gap:8px;margin-bottom:8px;}
+    .muted{color:#666;font-size:12px;margin-left:8px;}
+    .nowrap{white-space:nowrap;}
+    .w-compact{width:1%;white-space:nowrap;}
   </style>
 </head>
 <body>
   <h1>注文データ一覧</h1>
-  <button id="csvBtn">CSVダウンロード</button>
+
+  <div class="controls">
+    <button id="csvBtn">全件CSVダウンロード</button>
+
+    <!-- SVC（送り状用CSV）関連コントロール -->
+    <label>一括送り方:
+      <select id="bulkMethod">
+        <option value="ネコポス">ネコポス</option>
+        <option value="発払い">発払い</option>
+      </select>
+    </label>
+    <button id="applyBulk">選択行に一括適用</button>
+    <button id="svcBtn">選択分をSVCダウンロード</button>
+    <span class="muted">※「SVC」は送り状作成用のCSV想定。必要に応じて列構成は後で調整できます。</span>
+  </div>
+
   <table id="ordersTable">
     <thead>
       <tr>
-        <th>ID</th><th>名前</th><th>住所</th><th>電話</th><th>希望日</th><th>登録日</th>
+        <th class="w-compact"><input type="checkbox" id="checkAll" title="全選択/解除"></th>
+        <th>ID</th>
+        <th>名前</th>
+        <th>住所</th>
+        <th>電話</th>
+        <th>希望日</th>
+        <th>希望時間</th>
+        <th class="w-compact">送り方</th>
+        <th>登録日</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -35,38 +62,209 @@
       }
     })();
 
+    // ===== テーブルDOM参照 =====
+    const tbody = document.querySelector("#ordersTable tbody");
+    const checkAll = document.getElementById("checkAll");
+
+    // ===== データ保持（行ごとの送り方/選択状態を持つ） =====
+    /** @type {Array<{row:any, selected:boolean, method:string}>} */
+    let grid = [];
+
     // ===== 注文データを読み込む関数 =====
     async function loadOrders(){
       try {
         const res = await fetch("/api/orders");
-        if (!res.ok) {
-          throw new Error("データ取得に失敗しました");
-        }
+        if (!res.ok) throw new Error("データ取得に失敗しました");
         const data = await res.json();
-        const tbody = document.querySelector("#ordersTable tbody");
-        tbody.innerHTML = "";
-        data.forEach(row=>{
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-            <td>${row.id}</td>
-            <td>${row.last_name} ${row.first_name}</td>
-            <td>${row.prefecture}${row.city}${row.address}${row.building}</td>
-            <td>${row.phone}</td>
-            <td>${row.delivery_date || "-"}</td>
-            <td>${new Date(row.created_at).toLocaleString()}</td>
-          `;
-          tbody.appendChild(tr);
+
+        // 既存選択/設定を維持できるようにマップ
+        const prevMap = new Map(grid.map(g => [g.row.id, g]));
+
+        grid = data.map(row => {
+          const prev = prevMap.get(row.id);
+          return {
+            row,
+            selected: prev ? prev.selected : false,
+            method: prev ? prev.method : "ネコポス" // 既定はネコポス
+          };
         });
+
+        renderTable();
       } catch (err) {
         console.error("読み込みエラー:", err);
         alert("データの読み込み中にエラーが発生しました。");
       }
     }
 
-    // ===== CSVボタン =====
+    // ===== テーブル描画 =====
+    function renderTable(){
+      tbody.innerHTML = "";
+      grid.forEach((g, idx) => {
+        const r = g.row;
+
+        // 値の安全整形
+        const fullName = [r.last_name, r.first_name].filter(Boolean).join(" ");
+        const fullAddress = [r.prefecture, r.city, r.address, r.building].filter(Boolean).join("");
+        const deliveryDate = r.delivery_date || "-";
+        const deliveryTime = r.delivery_time || "-"; // ★ 追加：配達希望時間
+        const createdAt = r.created_at ? new Date(r.created_at).toLocaleString() : "-";
+
+        const tr = document.createElement("tr");
+
+        tr.innerHTML = `
+          <td class="nowrap">
+            <input type="checkbox" class="row-check" data-idx="${idx}" ${g.selected ? "checked" : ""}>
+          </td>
+          <td>${r.id}</td>
+          <td>${escapeHtml(fullName)}</td>
+          <td>${escapeHtml(fullAddress)}</td>
+          <td>${escapeHtml(r.phone || "-")}</td>
+          <td>${escapeHtml(deliveryDate)}</td>
+          <td>${escapeHtml(deliveryTime)}</td>
+          <td class="nowrap">
+            <select class="row-method" data-idx="${idx}">
+              <option value="ネコポス" ${g.method==="ネコポス"?"selected":""}>ネコポス</option>
+              <option value="発払い" ${g.method==="発払い"?"selected":""}>発払い</option>
+            </select>
+          </td>
+          <td>${escapeHtml(createdAt)}</td>
+        `;
+
+        tbody.appendChild(tr);
+      });
+
+      // 行イベント再バインド
+      tbody.querySelectorAll(".row-check").forEach(el => {
+        el.addEventListener("change", (e) => {
+          const i = Number(e.target.dataset.idx);
+          grid[i].selected = e.target.checked;
+        });
+      });
+      tbody.querySelectorAll(".row-method").forEach(el => {
+        el.addEventListener("change", (e) => {
+          const i = Number(e.target.dataset.idx);
+          grid[i].method = e.target.value;
+        });
+      });
+
+      // 全選択チェック状態を調整
+      syncCheckAll();
+    }
+
+    // ===== HTMLエスケープ（名前/住所に記号が入る場合に備え） =====
+    function escapeHtml(str){
+      if (str == null) return "";
+      return String(str)
+        .replaceAll("&","&amp;")
+        .replaceAll("<","&lt;")
+        .replaceAll(">","&gt;")
+        .replaceAll('"',"&quot;")
+        .replaceAll("'","&#39;");
+    }
+
+    // ===== CSV 生成（SVC 想定：運用に応じて列定義は調整可） =====
+    function buildSVC(selectedRows){
+      // ★ 想定カラム（例）:
+      // 受注ID, お届け先名, 電話番号, 住所, 希望日, 希望時間, 送り方, 明細名
+      // 実際の運用先（B2やe飛伝など）のレイアウトに合わせて、この配列を編集してください。
+      const headers = [
+        "order_id","name","phone","address","delivery_date","delivery_time","method","item_name"
+      ];
+
+      const lines = [headers.join(",")];
+
+      for (const g of selectedRows){
+        const r = g.row;
+        const fullName = [r.last_name, r.first_name].filter(Boolean).join(" ");
+        const fullAddress = [r.prefecture, r.city, r.address, r.building].filter(Boolean).join("");
+        const line = [
+          r.id ?? "",
+          fullName,
+          r.phone ?? "",
+          fullAddress,
+          r.delivery_date ?? "",
+          r.delivery_time ?? "",
+          g.method ?? "ネコポス",
+          (r.item_name || r.product_name || "植物") // 任意：品名が無い場合のデフォルト
+        ].map(csvEscape).join(",");
+        lines.push(line);
+      }
+
+      return lines.join("\r\n");
+    }
+
+    // ===== CSVフィールドのクォート処理 =====
+    function csvEscape(v){
+      const s = v == null ? "" : String(v);
+      if (/[",\r\n]/.test(s)) {
+        return '"' + s.replaceAll('"','""') + '"';
+      }
+      return s;
+    }
+
+    // ===== ファイルダウンロード =====
+    function downloadText(filename, text){
+      const blob = new Blob([text], {type:"text/csv;charset=utf-8"});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = filename;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+    }
+
+    // ===== イベント：全件CSV（既存仕様） =====
     document.getElementById("csvBtn").addEventListener("click", ()=>{
       window.location = "/api/orders/csv";
     });
+
+    // ===== イベント：全選択/解除 =====
+    checkAll.addEventListener("change", ()=>{
+      grid.forEach(g => g.selected = checkAll.checked);
+      // チェックボックスDOM反映
+      tbody.querySelectorAll(".row-check").forEach((el,i)=>{
+        el.checked = grid[i].selected;
+      });
+    });
+
+    // ===== イベント：一括送り方を選択行に適用 =====
+    document.getElementById("applyBulk").addEventListener("click", ()=>{
+      const val = document.getElementById("bulkMethod").value;
+      const targets = [];
+      grid.forEach((g, i) => {
+        if (g.selected) {
+          g.method = val;
+          targets.push(i);
+        }
+      });
+      // DOM反映
+      targets.forEach(i=>{
+        const sel = tbody.querySelector(`.row-method[data-idx="${i}"]`);
+        if (sel) sel.value = val;
+      });
+    });
+
+    // ===== イベント：SVCダウンロード（選択行のみ） =====
+    document.getElementById("svcBtn").addEventListener("click", ()=>{
+      const picked = grid.filter(g => g.selected);
+      if (picked.length === 0) {
+        alert("SVCに出力する注文を選択してください。");
+        return;
+      }
+      const csv = buildSVC(picked);
+      const ymd = new Date().toISOString().slice(0,10).replaceAll("-","");
+      downloadText(`svc_orders_${ymd}.csv`, csv);
+    });
+
+    // ===== 全選択の同期（表示更新時に呼ぶ） =====
+    function syncCheckAll(){
+      if (grid.length === 0) { checkAll.checked = false; checkAll.indeterminate = false; return; }
+      const selectedCount = grid.filter(g => g.selected).length;
+      checkAll.checked = selectedCount === grid.length;
+      checkAll.indeterminate = selectedCount > 0 && selectedCount < grid.length;
+    }
 
     // ===== ページ読み込み時に実行 =====
     loadOrders();
