--- a/public/admin.html
+++ b/public/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>nursery sera — 注文管理</title>
   <style>
     body{font-family:sans-serif;margin:40px;}
@@ -11,7 +11,6 @@
     button, select{margin:10px 6px 10px 0;padding:6px 14px;font-size:14px;cursor:pointer;}
     .controls{display:flex;flex-wrap:wrap;align-items:center;gap:8px;margin-bottom:8px;}
     .muted{color:#666;font-size:12px;margin-left:8px;}
-    .nowrap{white-space:nowrap;}
     .w-compact{width:1%;white-space:nowrap;}
   </style>
 </head>
@@ -19,9 +18,8 @@
   <h1>注文データ一覧</h1>
 
   <div class="controls">
-    <button id="csvBtn">全件CSVダウンロード</button>
+    <button id="csvBtn">（サーバー）全件CSVダウンロード</button>
 
-    <!-- SVC（送り状用CSV）関連コントロール -->
     <label>一括送り方:
       <select id="bulkMethod">
         <option value="ネコポス">ネコポス</option>
@@ -29,29 +27,23 @@
       </select>
     </label>
     <button id="applyBulk">選択行に一括適用</button>
-    <button id="svcBtn">選択分をSVCダウンロード</button>
-    <span class="muted">※「SVC」は送り状作成用のCSV想定。必要に応じて列構成は後で調整できます。</span>
+    <button id="selectedCsvBtn">（フロント）選択分CSVダウンロード</button>
+    <span class="muted">※選択分CSVはサーバーの列構成と完全一致、送り状種類のみ UI 選択（0 or A）を反映</span>
   </div>
 
   <table id="ordersTable">
     <thead>
       <tr>
         <th class="w-compact"><input type="checkbox" id="checkAll" title="全選択/解除"></th>
-        <th>ID</th>
-        <th>名前</th>
-        <th>住所</th>
-        <th>電話</th>
-        <th>希望日</th>
-        <th>希望時間</th>
-        <th class="w-compact">送り方</th>
-        <th>登録日</th>
+        <th>ID</th><th>名前</th><th>住所</th><th>電話</th>
+        <th>希望日</th><th>希望時間</th><th>送り方</th><th>登録日</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <script type="module">
-    // ===== パスワードガード（Firebase管理ページと同方式） =====
+    // ===== パスワードガード =====
     (function(){
       const pass = sessionStorage.getItem('admin-pass') || prompt('パスワードを入力してください');
       if (pass !== 'kohakurira') {
@@ -62,66 +54,99 @@
       }
     })();
 
-    // ===== テーブルDOM参照 =====
+    // ===== サーバーと同じ固定値 =====
+    const BILLING_CUSTOMER_CODE = "09067309120";
+    const FREIGHT_MGMT_NO = "01";
+    const DEFAULT_ITEM_NAME = "フラワーギフト";
+    const CONSIGNOR = {
+      phone: "09067309120",
+      zip: "5798023",
+      addr: "大阪府東大阪市立花町14-4",
+      name: "NURSERY SERA",
+    };
+
+    // ===== サーバーと同じ整形関数 =====
+    function nn(v){ return (v===undefined || v===null || String(v).trim()==="") ? null : v; }
+    function joinSafe(parts, sep=""){ return parts.filter(p => p!==null && p!==undefined && String(p).trim()!=="").join(sep); }
+
+    // B2時間帯コード正規化
+    function normalizeTimeSlot(input) {
+      if (!input) return "";
+      const VALID = ["0812","1214","1416","1618","1820","2021"];
+      const s = String(input).trim();
+      if (/^(0812|1214|1416|1618|1820|2021)$/.test(s)) return s;
+      const t = s.replace(/[：:]/g, ":").replace(/[～~\-ー−－]/g, "-").replace(/\s/g, "");
+      if (/午前中/.test(t)) return "0812";
+      const m = t.match(/(\d{1,2})(?::?\d{0,2})?-(\d{1,2})(?::?\d{0,2})?/);
+      if (m) {
+        const a = m[1].padStart(2,"0");
+        const b = m[2].padStart(2,"0");
+        const code = `${a}${b}`;
+        if (VALID.includes(code)) return code;
+      }
+      return "";
+    }
+    function formatDateYYYYMMDD(d) {
+      if (!d) return "";
+      const dt = new Date(d);
+      if (isNaN(dt.getTime())) return "";
+      const y = dt.getFullYear();
+      const m = String(dt.getMonth()+1).padStart(2,"0");
+      const da = String(dt.getDate()).padStart(2,"0");
+      return `${y}/${m}/${da}`;
+    }
+
+    // ===== 状態 =====
     const tbody = document.querySelector("#ordersTable tbody");
     const checkAll = document.getElementById("checkAll");
-
-    // ===== データ保持（行ごとの送り方/選択状態を持つ） =====
-    /** @type {Array<{row:any, selected:boolean, method:string}>} */
+    /** @type {Array<{row:any, selected:boolean, method:'ネコポス'|'発払い'}>} */
     let grid = [];
 
-    // ===== 注文データを読み込む関数 =====
+    // ===== ロード =====
     async function loadOrders(){
-      try {
+      try{
         const res = await fetch("/api/orders");
         if (!res.ok) throw new Error("データ取得に失敗しました");
         const data = await res.json();
 
-        // 既存選択/設定を維持できるようにマップ
+        // 既存選択/送り方維持
         const prevMap = new Map(grid.map(g => [g.row.id, g]));
-
         grid = data.map(row => {
           const prev = prevMap.get(row.id);
           return {
             row,
             selected: prev ? prev.selected : false,
-            method: prev ? prev.method : "ネコポス" // 既定はネコポス
+            method: prev ? prev.method : "発払い" // 既定は宅急便（発払い=0）
           };
         });
 
         renderTable();
-      } catch (err) {
-        console.error("読み込みエラー:", err);
+      }catch(e){
+        console.error(e);
         alert("データの読み込み中にエラーが発生しました。");
       }
     }
 
-    // ===== テーブル描画 =====
     function renderTable(){
       tbody.innerHTML = "";
       grid.forEach((g, idx) => {
         const r = g.row;
-
-        // 値の安全整形
-        const fullName = [r.last_name, r.first_name].filter(Boolean).join(" ");
-        const fullAddress = [r.prefecture, r.city, r.address, r.building].filter(Boolean).join("");
-        const deliveryDate = r.delivery_date || "-";
-        const deliveryTime = r.delivery_time || "-"; // ★ 追加：配達希望時間
+        const fullName = joinSafe([r.last_name, r.first_name], " ");
+        const fullAddr = joinSafe([r.prefecture, r.city, r.address, r.building], "");
         const createdAt = r.created_at ? new Date(r.created_at).toLocaleString() : "-";
+        const deliveryDate = r.delivery_date || "-";
+        const deliveryTime = r.time_slot || "-"; // ★ サーバーのカラム名に合わせる
 
         const tr = document.createElement("tr");
-
         tr.innerHTML = `
-          <td class="nowrap">
-            <input type="checkbox" class="row-check" data-idx="${idx}" ${g.selected ? "checked" : ""}>
-          </td>
+          <td><input type="checkbox" class="row-check" data-idx="${idx}" ${g.selected ? "checked":""}></td>
           <td>${r.id}</td>
           <td>${escapeHtml(fullName)}</td>
-          <td>${escapeHtml(fullAddress)}</td>
+          <td>${escapeHtml(fullAddr)}</td>
           <td>${escapeHtml(r.phone || "-")}</td>
           <td>${escapeHtml(deliveryDate)}</td>
           <td>${escapeHtml(deliveryTime)}</td>
-          <td class="nowrap">
+          <td>
             <select class="row-method" data-idx="${idx}">
               <option value="ネコポス" ${g.method==="ネコポス"?"selected":""}>ネコポス</option>
               <option value="発払い" ${g.method==="発払い"?"selected":""}>発払い</option>
@@ -129,145 +154,145 @@
           </td>
           <td>${escapeHtml(createdAt)}</td>
         `;
-
         tbody.appendChild(tr);
       });
 
-      // 行イベント再バインド
-      tbody.querySelectorAll(".row-check").forEach(el => {
-        el.addEventListener("change", (e) => {
+      tbody.querySelectorAll(".row-check").forEach(el=>{
+        el.addEventListener("change", e=>{
           const i = Number(e.target.dataset.idx);
           grid[i].selected = e.target.checked;
+          syncCheckAll();
         });
       });
-      tbody.querySelectorAll(".row-method").forEach(el => {
-        el.addEventListener("change", (e) => {
+      tbody.querySelectorAll(".row-method").forEach(el=>{
+        el.addEventListener("change", e=>{
           const i = Number(e.target.dataset.idx);
           grid[i].method = e.target.value;
         });
       });
 
-      // 全選択チェック状態を調整
       syncCheckAll();
     }
 
-    // ===== HTMLエスケープ（名前/住所に記号が入る場合に備え） =====
     function escapeHtml(str){
-      if (str == null) return "";
+      if (str==null) return "";
       return String(str)
-        .replaceAll("&","&amp;")
-        .replaceAll("<","&lt;")
-        .replaceAll(">","&gt;")
-        .replaceAll('"',"&quot;")
+        .replaceAll("&","&amp;").replaceAll("<","&lt;")
+        .replaceAll(">","&gt;").replaceAll('"',"&quot;")
         .replaceAll("'","&#39;");
     }
 
-    // ===== CSV 生成（SVC 想定：運用に応じて列定義は調整可） =====
-    function buildSVC(selectedRows){
-      // ★ 想定カラム（例）:
-      // 受注ID, お届け先名, 電話番号, 住所, 希望日, 希望時間, 送り方, 明細名
-      // 実際の運用先（B2やe飛伝など）のレイアウトに合わせて、この配列を編集してください。
-      const headers = [
-        "order_id","name","phone","address","delivery_date","delivery_time","method","item_name"
-      ];
+    // ===== サーバーと同じCSV列（タイトル＆順番） =====
+    const CSV_HEADERS = [
+      "お客様管理番号","送り状種類","クール区分","伝票番号","出荷予定日",
+      "お届け予定日","お届け時間帯","お届け先電話番号","お届け先郵便番号",
+      "お届け先住所１","お届け先住所２","お届け先会社・部門名","お届け先名",
+      "お届け先名(カナ)","敬称","品名コード1","品名1","出荷個数","記事",
+      "ご依頼主電話番号","ご依頼主郵便番号","ご依頼主住所","ご依頼主名",
+      "ご請求先顧客コード","運賃管理番号"
+    ];
 
-      const lines = [headers.join(",")];
+    // ===== 選択行 → サーバー同仕様CSVテキスト生成 =====
+    function buildSelectedCsv(selected){
+      const lines = [CSV_HEADERS.join(",")];
 
-      for (const g of selectedRows){
+      selected.forEach((g, i) => {
         const r = g.row;
-        const fullName = [r.last_name, r.first_name].filter(Boolean).join(" ");
-        const fullAddress = [r.prefecture, r.city, r.address, r.building].filter(Boolean).join("");
-        const line = [
-          r.id ?? "",
-          fullName,
-          r.phone ?? "",
-          fullAddress,
-          r.delivery_date ?? "",
-          r.delivery_time ?? "",
-          g.method ?? "ネコポス",
-          (r.item_name || r.product_name || "植物") // 任意：品名が無い場合のデフォルト
-        ].map(csvEscape).join(",");
-        lines.push(line);
-      }
+        const destName  = joinSafe([r.last_name, r.first_name], " ");
+        const destAddr1 = joinSafe([r.prefecture, r.city, r.address], "");
+        const destAddr2 = nn(r.building) || "";
+        const slipType  = (g.method === "ネコポス") ? "A" : "0"; // ★ ご要望：0 or A
+
+        const rowOut = [
+          String(i+1).padStart(4,"0"),         // お客様管理番号
+          slipType,                              // 送り状種類（0:宅急便 / A:ネコポス）
+          "0",                                   // クール区分（固定：無し）
+          "",                                    // 伝票番号
+          "",                                    // 出荷予定日
+          formatDateYYYYMMDD(r.delivery_date),   // お届け予定日
+          normalizeTimeSlot(r.time_slot),        // お届け時間帯
+          r.phone || "",                         // お届け先電話番号
+          (r.zipcode||"").replace(/\D/g,""),     // お届け先郵便番号
+          destAddr1,                             // お届け先住所１
+          destAddr2,                             // お届け先住所２
+          "",                                    // お届け先会社・部門名
+          destName,                              // お届け先名
+          "",                                    // お届け先名(カナ)
+          "様",                                  // 敬称
+          "",                                    // 品名コード1
+          DEFAULT_ITEM_NAME,                     // 品名1
+          "1",                                   // 出荷個数
+          r.memo || "",                          // 記事
+          CONSIGNOR.phone,                       // ご依頼主電話番号
+          CONSIGNOR.zip,                         // ご依頼主郵便番号
+          CONSIGNOR.addr,                        // ご依頼主住所
+          CONSIGNOR.name,                        // ご依頼主名
+          BILLING_CUSTOMER_CODE,                 // ご請求先顧客コード
+          FREIGHT_MGMT_NO                        // 運賃管理番号（01=発払い）
+        ];
+
+        lines.push(rowOut.map(csvEscape).join(","));
+      });
 
       return lines.join("\r\n");
     }
 
-    // ===== CSVフィールドのクォート処理 =====
+    // ===== CSVユーティリティ =====
     function csvEscape(v){
-      const s = v == null ? "" : String(v);
-      if (/[",\r\n]/.test(s)) {
-        return '"' + s.replaceAll('"','""') + '"';
-      }
-      return s;
+      const s = v==null ? "" : String(v);
+      return /[",\r\n]/.test(s) ? '"' + s.replaceAll('"','""') + '"' : s;
     }
-
-    // ===== ファイルダウンロード =====
     function downloadText(filename, text){
       const blob = new Blob([text], {type:"text/csv;charset=utf-8"});
       const url = URL.createObjectURL(blob);
       const a = document.createElement("a");
-      a.href = url;
-      a.download = filename;
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
+      a.href = url; a.download = filename;
+      document.body.appendChild(a); a.click(); a.remove();
       URL.revokeObjectURL(url);
     }
 
-    // ===== イベント：全件CSV（既存仕様） =====
-    document.getElementById("csvBtn").addEventListener("click", ()=>{
+    // ===== イベント =====
+    document.getElementById("csvBtn").addEventListener("click", () => {
+      // 既存（サーバー生成の全件CSV）
       window.location = "/api/orders/csv";
     });
 
-    // ===== イベント：全選択/解除 =====
-    checkAll.addEventListener("change", ()=>{
-      grid.forEach(g => g.selected = checkAll.checked);
-      // チェックボックスDOM反映
-      tbody.querySelectorAll(".row-check").forEach((el,i)=>{
-        el.checked = grid[i].selected;
-      });
-    });
-
-    // ===== イベント：一括送り方を選択行に適用 =====
-    document.getElementById("applyBulk").addEventListener("click", ()=>{
+    document.getElementById("applyBulk").addEventListener("click", () => {
       const val = document.getElementById("bulkMethod").value;
-      const targets = [];
-      grid.forEach((g, i) => {
-        if (g.selected) {
-          g.method = val;
-          targets.push(i);
-        }
-      });
+      grid.forEach(g => { if (g.selected) g.method = val; });
       // DOM反映
-      targets.forEach(i=>{
-        const sel = tbody.querySelector(`.row-method[data-idx="${i}"]`);
-        if (sel) sel.value = val;
+      tbody.querySelectorAll(".row-method").forEach(sel=>{
+        const i = Number(sel.dataset.idx);
+        if (grid[i].selected) sel.value = val;
       });
     });
 
-    // ===== イベント：SVCダウンロード（選択行のみ） =====
-    document.getElementById("svcBtn").addEventListener("click", ()=>{
+    document.getElementById("selectedCsvBtn").addEventListener("click", () => {
       const picked = grid.filter(g => g.selected);
       if (picked.length === 0) {
-        alert("SVCに出力する注文を選択してください。");
+        alert("CSVに出力する注文を選択してください。");
         return;
       }
-      const csv = buildSVC(picked);
+      const csv = buildSelectedCsv(picked);
       const ymd = new Date().toISOString().slice(0,10).replaceAll("-","");
-      downloadText(`svc_orders_${ymd}.csv`, csv);
+      downloadText(`orders_selected_${ymd}.csv`, csv);
     });
 
-    // ===== 全選択の同期（表示更新時に呼ぶ） =====
+    checkAll.addEventListener("change", ()=>{
+      grid.forEach(g => g.selected = checkAll.checked);
+      tbody.querySelectorAll(".row-check").forEach((el,i)=> el.checked = grid[i].selected);
+      syncCheckAll();
+    });
+
     function syncCheckAll(){
-      if (grid.length === 0) { checkAll.checked = false; checkAll.indeterminate = false; return; }
-      const selectedCount = grid.filter(g => g.selected).length;
-      checkAll.checked = selectedCount === grid.length;
-      checkAll.indeterminate = selectedCount > 0 && selectedCount < grid.length;
+      const total = grid.length;
+      const sel = grid.filter(g=>g.selected).length;
+      checkAll.checked = (sel===total && total>0);
+      checkAll.indeterminate = (sel>0 && sel<total);
     }
 
-    // ===== ページ読み込み時に実行 =====
-    loadOrders();
+    // ===== 初期ロード =====
+    await loadOrders();
   </script>
 </body>
 </html>
